# Deterministic

./: BatchDec.cpp  BatchDec.h  BatchDegree.h  BatchEnc.cpp  BatchEnc.h  BatsBasic.h  CMakeLists.txt  DistanceDef.h  README.md  TheNextDegree.txt  Thenextdegree.cpp  Utilities.h  fileinout.h  generateDistributionWithWassersteinDistance.cpp  packets_selection.cpp  simBats.cpp  simRecoder.h  simWdistance.cpp  wasserstein1simdegree.txt
